Fix tooltip not showing, tooltip content, and icon color shimmer

--- a/polaris-react/src/components/DataTable/DataTable.scss
+++ b/polaris-react/src/components/DataTable/DataTable.scss
@@ -165,8 +165,7 @@
   display: flex;
   align-self: flex-end;
   opacity: 0;
-  transition: opacity var(--p-duration-200) var(--p-ease),
-    fill var(--p-duration-200) var(--p-ease);
+  transition: opacity var(--p-duration-200) var(--p-ease);
 }
 
 .Heading {
@@ -176,7 +175,7 @@
   display: inline-flex;
   justify-content: flex-end;
   align-items: baseline;
-  @include recolor-icon(var(--p-icon));
+  @include recolor-icon(var(--p-icon-disabled));
   color: var(--p-text);
   transition: color var(--p-duration-200) var(--p-ease);
   cursor: pointer;
@@ -200,15 +199,10 @@
   }
 
   &:hover {
-    @include recolor-icon(var(--p-interactive-hovered));
     color: var(--p-interactive-hovered);
 
     .Icon {
       opacity: 1;
-
-      svg {
-        fill: var(--p-icon-disabled);
-      }
     }
   }
 
@@ -233,6 +227,10 @@
 .Cell-sorted {
   .Icon {
     opacity: 1;
+    @include recolor-icon(var(--p-icon));
+  }
+  &:hover {
+    @include recolor-icon(var(--p-interactive-hovered));
   }
 
   .Heading:focus:not(:active) {
